--- a/Homework4/Homework4.csproj
+++ b/Homework4/Homework4.csproj
@@ -43,11 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MutexTransaction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage.cs" />
-    <Compile Include="ITransactionManager.cs" />
+    <Compile Include="TimeoutException.cs" />
+    <Compile Include="TransactionCore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
